@@ -1,3 +1,4 @@
+#if 0 /* WHOLE FILE */
 /* access to regexp internals */
 #define regbol		exp_regbol
 #define regtry		exp_regtry
@@ -6,3 +7,4 @@
 extern char *regbol;
 int regtry();
 
+#endif /*0 WHOLE FILE */
